Project

General

Profile

Actions

Bug #17455

closed

mgr ignores mgr_beacon_period setting

Added by John Spray over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
ceph-mgr
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

There's a `mgr_beacon_period` configuration option but MgrStandby is still just using a hardcoded value: make it use the config setting.

Actions #1

Updated by John Spray about 7 years ago

  • Status changed from New to Resolved
commit efe5378c392efa7221ca3f1659b2998a3e511f2a
Author: xie xingguo <xie.xingguo@zte.com.cn>
Date:   Sun Oct 9 09:17:17 2016 +0800

    mgr/MgrStandby: use mgr_beacon_period to send beacon

    Fixes: http://tracker.ceph.com/issues/17455
    Signed-off-by: xie xingguo <xie.xingguo@zte.com.cn>
Actions

Also available in: Atom PDF