mgr/MgrStandby: use mgr_beacon_period to send beacon

Fixes: http://tracker.ceph.com/issues/17455
Signed-off-by: xie xingguo <xie.xingguo@zte.com.cn>